--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "babel-loader": "8.2.5",
     "babel-plugin-macros": "3.1.0",
     "css-loader": "6.7.1",
-    "cypress": "^10.7.0",
+    "cypress": "10.8.0",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "8.5.0",
@@ -109,6 +109,7 @@
     "react-test-renderer": "18.2.0",
     "require-context.macro": "1.2.2",
     "require-from-string": "2.0.2",
+    "rollup": "2.79.1",
     "sass": "1.55.0",
     "storybook-dark-mode": "1.1.2",
     "stylelint": "14.12.1",
