--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   "prettier": "@bjeco/prettier-config",
   "resolutions": {
     "glob-parent": "5.1.2",
-    "nth-check": "2.0.1"
+    "nth-check": "2.0.1",
+    "stylelint-order": "6.0.3"
   },
   "dependencies": {
     "ariakit": "2.0.0-next.41",
@@ -52,7 +53,7 @@
     "react-error-boundary": "3.1.4",
     "regenerator-runtime": "0.13.11",
     "rollup-plugin-commonjs": "10.1.0",
-    "tslib": "2.4.0"
+    "tslib": "2.6.1"
   },
   "devDependencies": {
     "@babel/core": "7.22.9",
@@ -118,21 +119,20 @@
     "sass": "1.64.1",
     "storybook-dark-mode": "3.0.1",
     "style-loader": "3.3.3",
-    "stylelint": "14.12.1",
-    "stylelint-config-css-modules": "4.1.0",
-    "stylelint-config-idiomatic-order": "8.1.0",
-    "stylelint-config-prettier": "9.0.5",
-    "stylelint-config-recommended-scss": "7.0.0",
-    "stylelint-config-standard": "28.0.0",
+    "stylelint": "15.10.2",
+    "stylelint-config-css-modules": "4.2.0",
+    "stylelint-config-idiomatic-order": "9.0.0",
+    "stylelint-config-recommended-scss": "12.0.0",
+    "stylelint-config-standard": "33.0.0",
     "stylus": "^0.59.0",
     "stylus-loader": "7.1.3",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "tsconfig-paths-webpack-plugin": "4.0.0",
+    "tsconfig-paths-webpack-plugin": "4.1.0",
     "typescript": "5.1.6",
     "url-loader": "4.1.1",
-    "webpack": "^5.75.0",
-    "webpack-merge": "^5.8.0"
+    "webpack": "5.88.2",
+    "webpack-merge": "5.9.0"
   },
   "packageManager": "yarn@3.2.3"
 }
