--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,189 +1,189 @@
-defaultSemverRangePrefix: ''
+defaultSemverRangePrefix: ""
 
 nodeLinker: node-modules
 
 packageExtensions:
-  '@nrwl/cypress@*':
+  "@nrwl/cypress@*":
     peerDependencies:
-      nx: '*'
-      typescript: '*'
+      nx: "*"
+      typescript: "*"
     peerDependenciesMeta:
       typescript:
         optional: true
-  '@nrwl/eslint-plugin-nx@*':
+  "@nrwl/devkit@*":
     peerDependencies:
-      nx: '*'
-      eslint: '*'
-      '@typescript-eslint/parser': '*'
+      nx: "*"
+      typescript: "*"
     peerDependenciesMeta:
       typescript:
         optional: true
-  '@nrwl/devkit@*':
+  "@nrwl/eslint-plugin-nx@*":
     peerDependencies:
-      nx: '*'
-      typescript: '*'
+      "@typescript-eslint/parser": "*"
+      eslint: "*"
+      nx: "*"
     peerDependenciesMeta:
       typescript:
         optional: true
-  '@nrwl/jest@*':
+  "@nrwl/jest@*":
     peerDependencies:
-      nx: '*'
-  '@nrwl/js@*':
+      nx: "*"
+  "@nrwl/js@*":
     peerDependencies:
-      nx: '*'
-      typescript: '*'
+      nx: "*"
+      typescript: "*"
     peerDependenciesMeta:
       typescript:
         optional: true
-  '@nrwl/linter@*':
+  "@nrwl/linter@*":
     peerDependencies:
-      nx: '*'
-  '@nrwl/next@*':
+      nx: "*"
+  "@nrwl/next@*":
     peerDependencies:
-      '@babel/core': '*'
-      eslint: '*'
-      next: '*'
-      nx: '*'
-      tsconfig-paths-webpack-plugin: '*'
-  '@nrwl/react@*':
+      "@babel/core": "*"
+      eslint: "*"
+      next: "*"
+      nx: "*"
+      tsconfig-paths-webpack-plugin: "*"
+  "@nrwl/react@*":
     peerDependencies:
-      '@types/node': '*'
-      eslint: '*'
-      nx: '*'
-      webpack: '*'
-  '@nrwl/rollup@*':
+      "@types/node": "*"
+      eslint: "*"
+      nx: "*"
+      webpack: "*"
+  "@nrwl/rollup@*":
     peerDependencies:
-      '@babel/core': '*'
-      nx: '*'
-      typescript: '*'
+      "@babel/core": "*"
+      nx: "*"
+      typescript: "*"
     peerDependenciesMeta:
       typescript:
         optional: true
-  '@nrwl/storybook@*':
+  "@nrwl/storybook@*":
     peerDependencies:
-      nx: '*'
-      webpack: '*'
-  '@nrwl/web@*':
+      nx: "*"
+      webpack: "*"
+  "@nrwl/web@*":
     peerDependencies:
-      nx: '*'
-  '@nrwl/webpack@*':
+      nx: "*"
+  "@nrwl/webpack@*":
     peerDependencies:
-      '@types/node': '*'
-      nx: '*'
-  '@nx/cypress@*':
+      "@types/node": "*"
+      nx: "*"
+  "@nx/cypress@*":
     peerDependencies:
-      nx: '*'
-      typescript: '*'
-  '@nx/eslint-plugin@*':
+      nx: "*"
+      typescript: "*"
+  "@nx/eslint-plugin@*":
     peerDependencies:
-      eslint: '*'
-      nx: '*'
-  '@nx/jest@*':
+      eslint: "*"
+      nx: "*"
+  "@nx/jest@*":
     peerDependencies:
-      nx: '*'
-      typescript: '*'
+      nx: "*"
+      typescript: "*"
     peerDependenciesMeta:
       typescript:
         optional: true
-  '@nx/js@*':
+  "@nx/js@*":
     peerDependencies:
-      nx: '*'
-      typescript: '*'
+      nx: "*"
+      typescript: "*"
     peerDependenciesMeta:
       typescript:
         optional: true
-  '@nx/linter@*':
+  "@nx/linter@*":
     peerDependencies:
-      nx: '*'
-      typescript: '*'
+      nx: "*"
+      typescript: "*"
     peerDependenciesMeta:
       typescript:
         optional: true
-  '@nx/next@*':
+  "@nx/next@*":
     peerDependencies:
-      '@babel/core': '*'
-      '@types/node': '*'
-      dotenv: '*'
-      eslint: '*'
-      express: '*'
-      nx: '*'
-      tsconfig-paths-webpack-plugin: '*'
-      typescript: '*'
-      webpack: '*'
+      "@babel/core": "*"
+      "@types/node": "*"
+      dotenv: "*"
+      eslint: "*"
+      express: "*"
+      nx: "*"
+      tsconfig-paths-webpack-plugin: "*"
+      typescript: "*"
+      webpack: "*"
     peerDependenciesMeta:
-      '@types/node':
+      "@types/node":
         optional: true
       typescript:
         optional: true
       webpack:
         optional: true
-  '@nx/react@*':
+  "@nx/react@*":
     peerDependencies:
-      '@types/node': '*'
-      eslint: '*'
-      nx: '*'
-      stylus: '*'
-      typescript: '*'
-      webpack: '*'
+      "@types/node": "*"
+      eslint: "*"
+      nx: "*"
+      stylus: "*"
+      typescript: "*"
+      webpack: "*"
     peerDependenciesMeta:
       stylus:
         optional: true
       typescript:
         optional: true
-  '@nx/rollup@*':
+  "@nx/rollup@*":
     peerDependencies:
-      '@babel/core': '*'
-      nx: '*'
-      typescript: '*'
+      "@babel/core": "*"
+      nx: "*"
+      typescript: "*"
     peerDependenciesMeta:
       typescript:
         optional: true
-  '@nx/storybook@*':
+  "@nx/storybook@*":
     peerDependencies:
-      nx: '*'
-      typescript: '*'
-      webpack: '*'
+      nx: "*"
+      typescript: "*"
+      webpack: "*"
     peerDependenciesMeta:
       typescript:
         optional: true
-  '@nx/web@*':
+  "@nx/web@*":
     peerDependencies:
-      '@types/node': '*'
-      nx: '*'
-      typescript: '*'
+      "@types/node": "*"
+      nx: "*"
+      typescript: "*"
     peerDependenciesMeta:
-      '@types/node':
+      "@types/node":
         optional: true
       typescript:
         optional: true
-  '@nx/webpack@*':
+  "@nx/webpack@*":
     peerDependencies:
-      '@babel/core': '*'
-      '@types/node': '*'
-      nx: '*'
-      typescript: '*'
+      "@babel/core": "*"
+      "@types/node": "*"
+      nx: "*"
+      typescript: "*"
     peerDependenciesMeta:
       typescript:
         optional: true
-  '@storybook/addon-essentials@*':
+  "@storybook/addon-docs@*":
     peerDependencies:
-      '@babel/core': '*'
-      webpack: '*'
-  '@storybook/addon-docs@*':
+      "@babel/core": "*"
+      webpack: "*"
+  "@storybook/addon-essentials@*":
     peerDependencies:
-      '@babel/core': '*'
-      webpack: '*'
-  '@storybook/core-server@*':
+      "@babel/core": "*"
+      webpack: "*"
+  "@storybook/core-server@*":
     peerDependencies:
-      react: '*'
-      react-dom: '*'
-  '@storybook/docs-tools@*':
+      react: "*"
+      react-dom: "*"
+  "@storybook/docs-tools@*":
     peerDependencies:
-      react: '*'
-      react-dom: '*'
-  '@storybook/telemetry@*':
+      react: "*"
+      react-dom: "*"
+  "@storybook/telemetry@*":
     peerDependencies:
-      react: '*'
-      react-dom: '*'
+      react: "*"
+      react-dom: "*"
 
-yarnPath: .yarn/releases/yarn-3.2.3.cjs
+yarnPath: .yarn/releases/yarn-3.6.1.cjs
