--- a/package.json
+++ b/package.json
@@ -83,8 +83,8 @@
     "@storybook/react": "7.1.1",
     "@svgr/webpack": "6.3.1",
     "@testing-library/react": "14.0.0",
-    "@types/jest": "29.4.4",
-    "@types/node": "18.14.2",
+    "@types/jest": "29.5.3",
+    "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "5.62.0",
@@ -92,7 +92,7 @@
     "babel-jest": "29.4.3",
     "babel-loader": "8.2.5",
     "babel-plugin-macros": "3.1.0",
-    "css-loader": "6.7.1",
+    "css-loader": "6.8.1",
     "cypress": "^12.16.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
@@ -108,11 +108,11 @@
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jest-junit": "14.0.1",
-    "lint-staged": "13.0.3",
+    "lint-staged": "13.2.3",
     "nx": "16.5.5",
     "nx-cloud": "16.1.1",
-    "prettier": "2.7.1",
-    "react-refresh": "^0.10.0",
+    "prettier": "3.0.0",
+    "react-refresh": "0.14.0",
     "require-context.macro": "1.2.2",
     "require-from-string": "2.0.2",
     "rollup": "2.79.1",
